security_group.tf
resource "aws_security_group" "default" {
  name        = "allow_traffic"
  description = "Allow Tcp inbound traffic"
  vpc_id      = aws_vpc.projectvpc.id

  ingress {
    description      = "Tcp"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "ssh"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "mysql"
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "SG-Project"
  }
}
